# boxy

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx  constants.ts  main.tsx  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  editing.rs  ffmpeg.rs  lib.rs  main.rs  scan.rs  search.rs  thumbs.rs  watcher.rs
src/components/: BulkBar.tsx  ClipDetail.tsx  CompressDialog.tsx  DateFilter.tsx  FilmstripPreview.tsx  GridCard.tsx  GridView.tsx  Settings.tsx  Sidebar.tsx  TagManager.tsx  TimelineDay.tsx  TimelineView.tsx  TitleBar.tsx  Toolbar.tsx  TrimEditor.tsx  VideoPreview.tsx  Waveform.tsx
src/store/: clipStore.ts  collectionStore.ts  index.ts  searchStore.ts  tagStore.ts  uiStore.ts
src/styles/: global.css
