[package]
name = "boxy"
version = "0.1.0"
description = "Cute video clip manager"
edition = "2021"

[lib]
name = "boxy_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
tokio = { version = "1", features = ["fs", "macros", "rt", "sync", "process"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
chrono = "0.4"
parking_lot = "0.12"
walkdir = "2"
regex = "1"
notify = "7"
notify-debouncer-mini = "0.5"
mimalloc = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
